# isaaclab_dextrous_grasp

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: train_new_objects.sh
docs/: migration.md  notes.md
isaaclab_dextrous_grasp/: __init__.py
scripts/: play.py  play_kinematic.py  play_replay.py  play_vividex.py  run_kinematic_all_objects.sh  run_kinematic_all_poses.sh  smoke_test.py  test_ik.py  train.py  visualize_pregrasp.py  visualize_trajectory.py
trajectories/: ycb-002_master_chef_can-20200709-subject-01-20200709_141754.npz  ycb-004_sugar_box-20200903-subject-04-20200903_104157.npz  ycb-004_sugar_box-20200908-subject-05-20200908_143931.npz  ycb-004_sugar_box-20200918-subject-06-20200918_113441.npz  ycb-005_tomato_soup_can-20200709-subject-01-20200709_142853.npz  ycb-005_tomato_soup_can-20200709-subject-01-20200709_142926.npz  ycb-005_tomato_soup_can-20201015-subject-09-20201015_143403.npz  ycb-006_mustard_bottle-20200709-subject-01-20200709_143211.npz  ycb-006_mustard_bottle-20200908-subject-05-20200908_144439.npz  ycb-006_mustard_bottle-20200928-subject-07-20200928_144226.npz  ycb-009_gelatin_box-20200709-subject-01-20200709_144357.npz  ycb-011_banana-20200709-subject-01-20200709_145401.npz  ycb-011_banana-20200813-subject-02-20200813_152608.npz  ycb-011_banana-20200820-subject-03-20200820_141935.npz  ycb-025_mug-20200709-subject-01-20200709_150949.npz  ycb-025_mug-20200820-subject-03-20200820_143304.npz  ycb-025_mug-20200928-subject-07-20200928_154547.npz  ycb-052_extra_large_clamp-20200709-subject-01-20200709_152843.npz  (+2 more)
(+54 files in other folders)
